crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_comparison_type_mismatch.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Type mismatch for >: lhs = String, rhs = Integer"
