crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_explicit_return_type_mismatch.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Type mismatch: expected return type Integer, got String(hello)"
- "Type mismatch: expected return type Integer, got String(hello)"
- "Type mismatch: expected return type Integer, got String"
