crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_invalid_attribute_on_type.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- Integer.nonexistent is not supported
