crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_non_integer_slice_index.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Type mismatch for slice start: type = String(a)"
- "Type mismatch for slice stop: type = String(b)"
