crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_optional_attribute_access_no_guard.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "[String| None].upper is not supported"
