crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_undefined_filter.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Potential TypeError: Filter 'not_a_filter' is not defined."
