crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_undefined_function.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Potential TypeError: Function 'not_a_function' is not defined."
