crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_undefined_macro_call.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Potential TypeError: Function 'unknown_macro' is not defined."
