crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_unknown_local_variable.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Potential TypeError: Unknown local variable 'unknown_var'"
