crates/dbt-jinja/minijinja/tests/snapshots/test_typecheck__typecheck_valid_integer_slice_index.snap
---
source: crates/dbt-jinja/minijinja/tests/test_typecheck.rs
expression: warnings
---
- "Type mismatch for slice b: type = List(Integer)"
